Changes in Version 1.0-2

  o The argument nrep was added to exams in order to allow sampling
    more than one exercise file from each list element of the argument file. 

Changes in Version 1.0-1
  
  o The man page of exams was modified to use suitable markup commands.

  o The questions in the ANOVA example were slightly changed to more
    explicitly indicate which hypothesis is tested. A typo in the
    vignette was fixed.

Changes in Version 1.0-0

  o New version accompanying publication in the Journal of
    Statistical Software. See vignette("exams", package = "exams")
    for more details.
    
  o New CITATION file pointing to the JSS paper, see
    citation("exams").


Changes in Version 0.9-5

  o The possible types of questions were extended to allow also text
    results. The new type is specified by "string".

  o To specify the allowed tolerance for numeric solutions now
    different tolerances can be supplied for falling below or
    exceeding the true value via \extol{lower}{upper}.

  o The "discussion" section in the vignette was extended to include
    several remarks and pointers on strategies for exercise
    generation.


Changes in Version 0.9-0

  o First CRAN release version.
  
  o New vignette "exams" that explains how to use the package.
  
  o New set of exercises for illustation in examples and vignette.
  

Changes in Version 0.2-0

  o First stable version for internal use at WU Wien.
